# config

./: .clang-format  .gitignore  CMakeLists.txt  README.md
contrib/: CMakeLists.txt
doc/: class_diagram.uxf  services.md  uml.xmi
src/: CMakeLists.txt
src/example_app/: CMakeLists.txt  app_config.cpp  app_config.hpp  example_app.fallback.xml  main.cpp
src/unit_tests/: CMakeLists.txt  main.cpp  test_config.hpp.in  tests-cache_backend_xml.cpp  tests-common.cpp  tests-config.cpp  tests-http_service.cpp  tests-static_service_discoverer.cpp
src/unit_tests/data/: config.xml.in  index.xml.in
